@@ -123,7 +123,6 @@ lazy val `surge-docs` = (project in file("modules/surge-docs"))
   .dependsOn(`surge-common`, `surge-engine-command-core`, `surge-engine-command-javadsl`, `surge-engine-command-scaladsl`, `surge-metrics`)
   .enablePlugins(ParadoxPlugin, ParadoxSitePlugin, GhpagesPlugin)
   .settings(
-    javacOptions ++= Seq("-source", "15", "--enable-preview"),
     compileOrder := CompileOrder.JavaThenScala,
     publish / skip := true,
     paradoxTheme := Some(builtinParadoxTheme("generic")),
